--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -42,21 +42,8 @@
 			<div class="row">
 
 				<div class="col-sm-4 col-lg-4">
-					<h5 class="mt-2">File Upload</h5>
+					<h5 class="mt-2 mb-3 fw-bold">File Upload</h5>
 
-					<!--
-					<input type="number" min="1900" max="2099" step="1" value="2016" />
-					<input type="number" min="1972" max="2050" step="1" value="2025">	
-
-					<div class="input-group mb-3">
-						<input type="date" class="form-control shadow-none" id="year-picker">
-					</div>
-					-->
-
-					<!--
-					  <form action="/upload" method="post" enctype="multipart/form-data">
-						Category (for 4 Docs)
-					-->
 					<form id="UploadFileForm" class="needs-validation" novalidate>
 						<div class="mb-2">
 							<label for="DocCategory" class="form-label">Doc Category: </label>
@@ -84,7 +71,7 @@
 				</div><!-- End of col 1 -->
 	
 				<div class="col-sm-6 col-lg-6">
-						<h5 class="mt-2">Photos Upload</h5>
+						<h5 class="mt-2 mb-3 fw-bold">Photos Upload</h5>
 						<form id="UploadPhotosForm" class="needs-validation" novalidate>
 							<div class="mb-2">
 								<label for="EventCategory" class="form-label">Event: </label>
@@ -95,19 +82,53 @@
 								</select>
 							</div>
 
-							<div class="mb-2">
-								<label for="FormFile2" class="form-label">1: </label>
-								<input  id="Title1" type="text" class="form-control"  />
+							<div class="row mb-2">
+								<div class="col-sm-1">
+									
+								</div>
+								<div class="col-sm-6 fw-bold">
+									Description
+								</div>
+								<div class="col-sm-5 fw-bold">
+									Photo File
+								</div>
 							</div>
-							
-							<div class="mb-2">
-								<!--
-								<label for="FormFile2" class="form-label">Photo to upload: </label>
-								-->
-								<input  id="FormFile2" class="form-control" type="file" name="FormFile1" accept="image/jpeg" required/>
+							<div class="row mb-2">
+								<div class="col-sm-1">
+									1
+								</div>
+								<div class="col-sm-6">
+									<input  id="PhotoTitle1" name="PhotoTitle1" type="text" class="form-control" maxlength="40" placeholder="Enter description"/>
+								</div>
+								<div class="col-sm-5">
+									<input  id="PhotoFile1" name="PhotoFile1" class="form-control" type="file" accept="image/jpeg" />
+								</div>
+							</div>
+							<div class="row mb-2">
+								<div class="col-sm-1">
+									2
+								</div>
+								<div class="col-sm-6">
+									<input  id="PhotoTitle2" name="PhotoTitle2" type="text" class="form-control" maxlength="40" placeholder="Enter description" />
+								</div>
+								<div class="col-sm-5">
+									<input  id="PhotoFile2" name="PhotoFile2" class="form-control" type="file" accept="image/jpeg" />
+								</div>
+							</div>
+							<div class="row mb-2">
+								<div class="col-sm-1">
+									3
+								</div>
+								<div class="col-sm-6">
+									<input  id="PhotoTitle3" name="PhotoTitle3" type="text" class="form-control" maxlength="40" placeholder="Enter description" />
+								</div>
+								<div class="col-sm-5">
+									<input  id="PhotoFile3" name="PhotoFile3" class="form-control" type="file" accept="image/jpeg" />
+								</div>
 							</div>
 
-							<button type="submit" class="btn btn-primary mt-1">Upload Photos</button>
+							<button type="submit" class="btn btn-primary m-2">Upload Photos</button>
+							<div id="PhotosUploadMessageDisplay" class="m-2"></div>
 						</form>
 
 				</div> <!-- End of col 2 -->
@@ -121,7 +142,7 @@
 				<input id="TrusteeId" type="text" disabled hidden>
 				<div class="row">
 					<div class="col-sm-4 col-md-4">
-						<h5 class="mt-2">Board of Trustees - Maintenance</h5>
+						<h5 class="mt-2 fw-bold">Board of Trustees - Maintenance</h5>
 
 						<div class="row">
 							<div class="col">
