working on db updates

--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -48,10 +48,10 @@
 						<div class="mb-2">
 							<label for="DocCategory" class="form-label">Doc Category: </label>
 							<select id="DocCategory" name="DocCategory" class="p-1">
-								<option value="Quail Call newsletter">Quail Call newsletter</option>
-								<option value="Annual Meeting">Annual Meeting</option>
-								<option value="Governing Doc">Governing Doc</option>
-								<option value="Historical Doc">Historical Doc</option>
+								<option value="Quail Call newsletters">Quail Call newsletter</option>
+								<option value="Annual Meetings">Annual Meeting</option>
+								<option value="Governing Docs">Governing Doc</option>
+								<option value="Historical Docs">Historical Doc</option>
 							</select>
 						</div>
 
