Done with doc and photos upload

--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -57,7 +57,7 @@
 
 						<div class="mb-2">
 							<label for="DocMonth" class="form-label">Year & Month: </label>
-							<input id="DocMonth" name="DocMonth" type="month" class="" required>
+							<input  id="DocMonth" name="DocMonth" type="month" class="" required>
 						</div>
 
 						<div class="mb-2">
@@ -80,6 +80,11 @@
 									<option value="Halloween">Halloween</option>
 									<option value="Easter">Easter</option>
 								</select>
+							</div>
+
+							<div class="mb-2">
+								<label for="EventMonth" class="form-label">Year & Month: </label>
+								<input  id="EventMonth" name="DocMonth" type="month" class="" required>
 							</div>
 
 							<div class="row mb-2">
