Fix Event month bug

--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -84,7 +84,7 @@
 
 							<div class="mb-2">
 								<label for="EventMonth" class="form-label">Year & Month: </label>
-								<input  id="EventMonth" name="DocMonth" type="month" class="" required>
+								<input  id="EventMonth" name="EventMonth" type="month" class="" required>
 							</div>
 
 							<div class="row mb-2">
