--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                     <i class="fa fa-home fa-2x float-start"></i> Realtors and <br> Title Agents</a>
                 <button class="btn btn-success mt-2 link-tile" type="button" role="button" id="DuesLinkTile">
                     <i class="fa fa-dollar fa-2x float-start"></i> Dues and <br> Liens</button>
-                <button class="btn btn-primary mt-2 link-tile link-tile-tab media-page" type="button" role="button" data-MediaType="4">
+                <button class="btn btn-primary mt-2 link-tile link-tile-tab media-page" type="button" role="button" data-MediaType="4" data-Category="Quail Call newsletters">
                     <i class="fa fa-file-text-o fa-2x float-start"></i> Quail Call <br>newsletter</button>
                 <a class="btn btn-warning mt-2 link-tile" href="https://grhawebstorage.blob.core.windows.net/docs/GRHA%20Welcome%20Letter.pdf" target="_blank">
                     <i class="fa fa-info fa-2x float-start"></i> Welcome <br>message</a>
