working on event photo display

--- a/src/index.html
+++ b/src/index.html
@@ -97,36 +97,8 @@
                     <i class="fa fa-calendar fa-2x float-start"></i> Events / <br>Calendar</a>
                 <button class="btn btn-warning mt-2 link-tile" data-dir="Contacts" type="button" role="button" id="ContactsLinkTile">
                     <i class="fa fa-phone fa-2x float-start"></i> Contact <br>us</button>
-                
-                <!--
-                 link-tile-tab
 
-                <div class="float-start m-2">
-                    The 2021 GRHA Christmas decorating contest winners are:
-                    <h6>1st Place - 6062 Pine Glen</h6>
-                    <h6>2nd Place - 4525 Falcon</h6>
-                    <h6>3rd Place - 4473 Willow Mist</h6>
-                </div>
-                <div class="float-start m-2">
-                    The 2022 GRHA Christmas decorating contest winners are:
-                    <h6>1st Place - 4403 Summit Ridge</h6>
-                    <h6>2nd Place - 6140 Gander Rd East</h6>
-                    <h6>3rd Place - 4525 Falcon Circle</h6>
-                </div>
-                <div class="float-start">
-                    <img class="mr-1" alt="Christmas winner 1st place" src="https://grhawebstorage.blob.core.windows.net/images/Christmas/1.jpg" width="30%">
-                    <img class="mr-1" alt="Christmas winner 2nd place" src="https://grhawebstorage.blob.core.windows.net/images/Christmas/2.jpg" width="30%">
-                    <img class="mr-1" alt="Christmas winner 34d place" src="https://grhawebstorage.blob.core.windows.net/images/Christmas/3.jpg" width="30%">
-                </div>
-                
-                <h6 class="my-2">2023 Easter Egg Hunt Event</h6>
-                <div class="float-start">
-                    <img class="mr-1" alt="Easter Egg Hunt 1" src="https://grhawebstorage.blob.core.windows.net/images/Easter/1.jpg" width="30%">
-                    <img class="mr-1" alt="Easter Egg Hunt 2" src="https://grhawebstorage.blob.core.windows.net/images/Easter/2.jpg" width="30%">
-                    <img class="mr-1" alt="Easter Egg Hunt 3" src="https://grhawebstorage.blob.core.windows.net/images/Easter/3.jpg" width="30%">
-                </div>
-                -->
-
+                <div id="EventPhotos" class="mt-4 mb-2"></div>
                 <!--
                 <div class="float-start d-none d-sm-block my-3">
                     <i class="fa fa-home fa-4x float-start"></i>
