working on HOADB

--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -462,7 +462,8 @@
     <script src="js/main.js" type="module"></script>
 
 	<!--
-    <script src="js/util.js?ver=2.019"></script>
+		>>>>>> I'm now just referencing these as modules from main
+	<script src="js/util.js?ver=2.019"></script>
 	<script src="js/config.js?ver=2.016"></script>
 	<script src="js/search.js?ver=2.016"></script>
     <script src="js/detail.js?ver=2.019"></script>
