--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -89,23 +89,23 @@
 				  		<div class="col-xs-5 col-sm-5">
 			             	<h5>Detail</h5>
 							<div id="DetailMessageDisplay" class="m-2"></div>
-							<a id="MCTreasLink" href="" class="btn btn-sm btn-primary me-1 mb-1 float-left d-none d-md-block" role="button" target="_blank">
-								County<br>Treasurer
+							<a id="MCTreasLink" href="" class="btn btn-sm btn-primary me-1 mb-1 " role="button" target="_blank">
+								County Treasurer
 							</a>
-							<a id="MCAuditorLink" href="" class="btn btn-sm btn-primary me-1 mb-1 float-left d-none d-md-block" role="button" target="_blank">
-								County<br>Property
+							<a id="MCAuditorLink" href="" class="btn btn-sm btn-primary me-1 mb-1 " role="button" target="_blank">
+								County Property
 							</a>
-							<a id="DuesStatementButton" data-parcelId="" data-ownerId="" href="" class="btn btn-sm btn-success mr-1 mb-1 float-left" role="button">
+							<a id="DuesStatementButton" data-parcelId="" data-ownerId="" href="" class="btn btn-sm btn-success me-1 mb-1 " role="button">
 								Dues Statement
 							</a>
-							<a id="NewOwnerButton" data-parcelId="" data-ownerId="" href="" class="btn btn-sm btn-warning mr-1 mb-1 float-left" role="button">
+							<a id="NewOwnerButton" data-parcelId="" data-ownerId="" href="" class="btn btn-sm btn-warning me-1 mb-1 " role="button">
 								New Owner
 							</a>
-							<a id="CommunicationsButton" data-parcelId="" data-ownerId="" href="" class="btn btn-sm btn-info mr-1 mb-1 float-left" role="button">
+							<a id="CommunicationsButton" data-parcelId="" data-ownerId="" href="" class="btn btn-sm btn-info me-1 mb-1 " role="button">
 								Communications
 							</a>
 							<!--
-		                  	<div id="AddAssessment">
+							<div id="AddAssessment">
 							</div>
 							-->
 		            	</div>
