--- a/src/hoadb/index.html
+++ b/src/hoadb/index.html
@@ -500,9 +500,34 @@
     <!-- Bootstrap 5 JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <script src="js/main.js" type="module"></script>
 
+	<script>
+  //const doc = new jsPDF();
+  //doc.text("Hello world!", 10, 10);
+  //doc.save("example.pdf");
+</script>
+	
 	<!--
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/3.0.1/jspdf.umd.min.js"></script>
+	<script>
+  const doc = new jsPDF();
+  //doc.text("Hello world!", 10, 10);
+  //doc.save("example.pdf");
+</script>
+
+
+	https://cdnjs.cloudflare.com/ajax/libs/jspdf/3.0.1/jspdf.umd.min.js
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/3.0.1/jspdf.umd.min.js"></script>
+<script>
+  const doc = new jsPDF();
+  doc.text("Hello world!", 10, 10);
+  doc.save("example.pdf");
+</script>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/3.0.1/jspdf.es.min.js" type="module"></script>
 		>>>>>> I'm now just referencing these as modules from main
 	<script src="js/util.js?ver=2.019"></script>
